--- a/index.html
+++ b/index.html
@@ -1,55 +1,77 @@
+ 
 <html>
   <head>
-    <title>Emotion recognition</title>
+    <title>Emotion To Emoji</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
-   <link rel="stylesheet" href="style.css">
-  
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-  <div class="container">
     
+
+  <div class="container">
+  
     <center>
-
-      <br><br>
-
-      <p style="font-size: 22px;">Model is trained to identify the following emotions</p>
-
-      <p style="font-size: 22px;">This modle is trained to identify the following emotions</p>
+      <h3 class=" btn btn-warning heading">
+        Emotion To Emoji.
         <br>
-      <b class="name_object">
-        happy
-        <hr>
-        sad
-        <hr>
-        angry
-        <hr>
-        surprised
-        <hr>
-        confused
-      </b>
-
-      <label>Webcam View - </label>
-
-      <br><br>
-      <div id="result"></div>
-      <br><br>
-      <button onclick="take_snapshot();" class="btn btn-info">capture Image</button>
-      <br><br>
-      <button onclick="onclick();" class="btn btn-success">Identify Image</button>
+        <span>&#128522;</span>
+        <span>&#128512;</span>
+        <span>&#128532;</span>
+        <span>&#128546;</span>
+        <span>&#128545;</span>
+        <span>&#128548;</span>
+      </h3>
       <br><br>
 
-      <p style="font-size: 22px;">Object :  </p>
-      <p style="font-size: 22px;">Accuracy :  </p>
+        <p style="font-size: 22px;">Take your selfie to generate emoji
+      	<br>
+        <b style="color: yellow">Are you Happy?</b>
+        <br>
+        <b style="color: black">Are you Sad?</b>
+        <br>
+        <b style="color: red">Are you Angry?</b>
+        <br>
+      </p>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <label>Webcam View</label>
+        <br>
+        <div id="camera"></div>
+        <br>
+        <button class="btn btn-warning" onclick="take_snapshot()">Capture Image</button>
+        <br><br>
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <label style="font-size:25px ;">Prediction 1 - </label>
+        <p class="emotion_name" id="emotion_result1"></p>
+        <p class="emoji" id="emoji_result1"></p>
+
+        <label style="font-size:25px ;">Prediction 2 - </label>
+        <p class="emotion_name" id="emotion_result2"></p>
+        <p class="emoji" id="emoji_result2"></p>
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+	      <label>Snapshot - </label>
+        <br>
+        <div id="output"></div>
+        <br>
+        <button class="btn btn-warning" onclick="check()">Analyse</button>
+
+        <br><br>
+
+      </div>
+
     </center>
 
   </div>
+
 <script src="main.js"></script>
 
   </body>
